[FIX] Result: Fix the problem that the image is not centered when the Result component displays the image.

--- a/components/result/style/index.less
+++ b/components/result/style/index.less
@@ -30,7 +30,7 @@
   }
 
   &-icon {
-    margin: @result-icon-margin;
+    margin-bottom: @result-icon-margin-bottom;
     text-align: center;
 
     > .icon {
